# jorbit

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  ephem_astrometry_differences.ipynb  mpmath_scratch.ipynb  pyproject.toml  requirements.txt  scratch.ipynb  scratch2.ipynb  scratch_constants.py  scratch_gj.ipynb  scratch_leapfrog.ipynb  static_integration_scratch.ipynb  todo.txt  tox.ini  tpf_orbits.ipynb
.github/workflows/: python-package.yml  tests.yml
docs/: conf.py  core_api.md  index.md  index.rst  quickstart.ipynb  requirements.txt
docs/advanced/: accelerations.rst  astrometry.rst  data.rst  ephemeris_core.rst  integrators.rst  mpchecker_core.rst  utils.rst
docs/api/: jorbit.engine.acceleration.rst  jorbit.engine.b6.rst  jorbit.engine.barycentricmeanecliptic_to_icrs.rst  jorbit.engine.cart_to_elements.rst  jorbit.engine.gr.rst  jorbit.engine.icrs_to_barycentricmeanecliptic.rst  jorbit.engine.inferred_vs.rst  jorbit.engine.inferred_xs.rst  jorbit.engine.loglike.rst  jorbit.engine.loglike_helper.rst  jorbit.engine.negative_loglike_single_grad.rst  (+10 more)
jorbit/: __init__.py  construct_perturbers.py  engine.py  observations.py  particle.py  plotting.py  system.py  utils.py
paper/: apophis.ipynb  asteroid_identification.ipynb  autodiff_compare.ipynb  doubledouble_integrator.ipynb  ephemeris_timing.ipynb  horizons_compare.ipynb  lightcurve_contamination.ipynb  out_and_back_tests.ipynb  wikipedia_orbit_fit.ipynb
tests/: test_accelerations.py  test_cache.py  test_dd_integrator_roundtrip.py  test_doubledouble.py  test_dynamic_interp.py  test_ephemeris_parsing.py  test_gr_precision.py  test_grav_harmonics_precision.py  test_horizons_queries.py  test_horizons_query.py  test_leapfrog_setup.py  test_loglike_comparison.py  test_mpchecker.py  test_newtonian_precision.py  test_nongrav_precision.py  test_orbit_fit_seeds.py  test_particle.py  test_sky_projection.py  test_solar_system_dd.py  test_static_integrator.py  test_transformations.py
(+163 files in other folders)
