[project]
name = "jorbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben-Cassese", email = "b.c.cassese@columbia.edu" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
