[project]
name = "jorbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben-Cassese", email = "b.c.cassese@columbia.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.6",
    "astroquery>=0.4.7",
    "jax>=0.4.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.5",
    "pre-commit>=4.0.1",
    "sphinx-automodapi>=0.18.0",
    "sphinx-book-theme>=1.1.3",
    "sphinx>=8.1.3",
    "sphinxcontrib-video>=0.3.1",
]
