[project]
name = "jorbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben-Cassese", email = "b.c.cassese@columbia.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.6",
    "astroquery>=0.4.7",
    "chex>=0.1.88",
    "jax>=0.4.35",
    "jplephem>=2.22",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.5",
    "optimistix>=0.0.9",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "rebound>=4.4.3",
    "reboundx>=4.4.0",
    "sphinx-automodapi>=0.18.0",
    "sphinx-book-theme>=1.1.3",
    "sphinx>=8.1.3",
    "sphinxcontrib-video>=0.3.1",
]
